# discord_rust

./: .env  .gitignore  Cargo.toml  README.md  data.json  dataGC.json  dataMC.json  dataVSU.json
src/: connection.rs  main.rs  opcodes_types.rs  test2.rs  voice.rs
