[package]
name = "discord_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
tokio-tungstenite = {version="0.18.0", features = ["native-tls"]}
url = "2.3.1"
rand = "*"
tokio = { version = "1.23.0", features = ["full"] }
futures = "0.3.28"
serde_json = "1.0.96"
dotenv = "0.15.0"
serde = { version ="1.0.160", features = ["derive"] }
reqwest = {  version = "0.11.17", features = ["json", "blocking"] }
